learning_basilisk/couette_example/multiFluid/slurm-1195978.out
qcc -autolink -O2 -g -Wall -pipe -D_FORTIFY_SOURCE=2 -DDUMBGL -o agupta5/agupta5 agupta5.c  -lm
In file included from /usr/include/stdint.h:25:0,
                 from /usr/lib/gcc/x86_64-redhat-linux/4.8.5/include/stdint.h:9,
                 from agupta5-cpp.c:6:
/usr/include/features.h:330:4: warning: #warning _FORTIFY_SOURCE requires compiling with optimization (-O) [-Wcpp]
 #  warning _FORTIFY_SOURCE requires compiling with optimization (-O)
    ^
agupta5.c: In function ‘main’:
agupta5.c:55:3: error: expected ‘;’ before ‘rho2’
   rho2 = rho_ratio;
   ^
agupta5.c:60:3: error: expected ‘;’ before ‘_attribute’
   f.sigma = 1./We;
   ^
make: *** [agupta5.s] Error 1
make: *** [agupta5.s] Error 1
